# mc_rtc

my_first_controller/: CMakeLists.txt
my_first_controller/config/: task.json  task.yaml
my_first_controller/src/: CMakeLists.txt  MyFirstController.cpp  MyFirstController.h  print_robot.cpp
my_first_fsm_controller/: CMakeLists.txt
my_first_fsm_controller/etc/: MyFirstFsmController.in.yaml
my_first_fsm_controller/src/: CMakeLists.txt  MyFirstFsmController.cpp  MyFirstFsmController.h  api.h  lib.cpp
my_first_fsm_controller/src/states/: CMakeLists.txt  MyFirstFsmController_Initial.cpp  MyFirstFsmController_Initial.h
src/mc_observers/: KinematicInertialPoseObserver.cpp
src/mc_tasks/lipm_stabilizer/: StabilizerTask.cpp
utils/: build_and_install.sh
